// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RectangleElement > render > Non-Button Rendering > should handle cornerRadius prop as an alias for rx 1`] = `
{
  "_$litType$": 2,
  "strings": [
    "
                <g id="",
    "">
                    ",
    "
                    ",
    "
                </g>
            ",
  ],
  "values": [
    "rect-cornerRadius",
    {
      "_$litType$": 2,
      "strings": [
        "
      <path
        id="",
        "__shape"
        d=",
        "
        fill=",
        "
        stroke=",
        "
        stroke-width=",
        "
      />
    ",
      ],
      "values": [
        "rect-cornerRadius",
        "M 0.000,4.000 A 4.000,4.000 0 0,1 4.000,0.000 L 16.000,0.000 A 4.000,4.000 0 0,1 20.000,4.000 L 20.000,16.000 A 4.000,4.000 0 0,1 16.000,20.000 L 4.000,20.000 A 4.000,4.000 0 0,1 0.000,16.000 Z",
        "yellow",
        "none",
        "0",
      ],
    },
    null,
  ],
}
`;

exports[`RectangleElement > render > Non-Button Rendering > should handle zero dimensions (width=0 or height=0) by rendering a minimal path 1`] = `
{
  "_$litType$": 2,
  "strings": [
    "
                <g id="",
    "">
                    ",
    "
                    ",
    "
                </g>
            ",
  ],
  "values": [
    "rect-zero-w",
    {
      "_$litType$": 2,
      "strings": [
        "
      <path
        id="",
        "__shape_placeholder"
        d="M ",
        ",",
        " L ",
        ",",
        " L ",
        ",",
        " L ",
        ",",
        " Z"
        fill="none"
        stroke="none"
        stroke-width="0"
      />
    ",
      ],
      "values": [
        "rect-zero-w",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
      ],
    },
    null,
  ],
}
`;

exports[`RectangleElement > render > Non-Button Rendering > should handle zero dimensions (width=0 or height=0) by rendering a minimal path 2`] = `
{
  "_$litType$": 2,
  "strings": [
    "
                <g id="",
    "">
                    ",
    "
                    ",
    "
                </g>
            ",
  ],
  "values": [
    "rect-zero-h",
    {
      "_$litType$": 2,
      "strings": [
        "
      <path
        id="",
        "__shape_placeholder"
        d="M ",
        ",",
        " L ",
        ",",
        " L ",
        ",",
        " L ",
        ",",
        " Z"
        fill="none"
        stroke="none"
        stroke-width="0"
      />
    ",
      ],
      "values": [
        "rect-zero-h",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
        "10.000",
      ],
    },
    null,
  ],
}
`;

exports[`RectangleElement > render > Non-Button Rendering > should prioritize rx over cornerRadius if both are present 1`] = `
{
  "_$litType$": 2,
  "strings": [
    "
                <g id="",
    "">
                    ",
    "
                    ",
    "
                </g>
            ",
  ],
  "values": [
    "rect-rx-priority",
    {
      "_$litType$": 2,
      "strings": [
        "
      <path
        id="",
        "__shape"
        d=",
        "
        fill=",
        "
        stroke=",
        "
        stroke-width=",
        "
      />
    ",
      ],
      "values": [
        "rect-rx-priority",
        "M 0.000,6.000 A 6.000,6.000 0 0,1 6.000,0.000 L 19.000,0.000 A 6.000,6.000 0 0,1 25.000,6.000 L 25.000,19.000 A 6.000,6.000 0 0,1 19.000,25.000 L 6.000,25.000 A 6.000,6.000 0 0,1 0.000,19.000 Z",
        "cyan",
        "none",
        "0",
      ],
    },
    null,
  ],
}
`;

exports[`RectangleElement > render > Non-Button Rendering > should render a basic rectangle path with default props if none provided 1`] = `
{
  "_$litType$": 2,
  "strings": [
    "
                <g id="",
    "">
                    ",
    "
                    ",
    "
                </g>
            ",
  ],
  "values": [
    "rect-default-props",
    {
      "_$litType$": 2,
      "strings": [
        "
      <path
        id="",
        "__shape"
        d=",
        "
        fill=",
        "
        stroke=",
        "
        stroke-width=",
        "
      />
    ",
      ],
      "values": [
        "rect-default-props",
        "M 0.000,0.000 L 10.000,0.000 L 10.000,10.000 L 0.000,10.000 Z",
        "none",
        "none",
        "0",
      ],
    },
    null,
  ],
}
`;

exports[`RectangleElement > render > Non-Button Rendering > should render with specified fill, stroke, strokeWidth, and rx 1`] = `
{
  "_$litType$": 2,
  "strings": [
    "
                <g id="",
    "">
                    ",
    "
                    ",
    "
                </g>
            ",
  ],
  "values": [
    "rect-styled",
    {
      "_$litType$": 2,
      "strings": [
        "
      <path
        id="",
        "__shape"
        d=",
        "
        fill=",
        "
        stroke=",
        "
        stroke-width=",
        "
      />
    ",
      ],
      "values": [
        "rect-styled",
        "M 1.000,9.000 A 7.000,7.000 0 0,1 8.000,2.000 L 24.000,2.000 A 7.000,7.000 0 0,1 31.000,9.000 L 31.000,35.000 A 7.000,7.000 0 0,1 24.000,42.000 L 8.000,42.000 A 7.000,7.000 0 0,1 1.000,35.000 Z",
        "rgba(255,0,0,0.5)",
        "#00FF00",
        "3.5",
      ],
    },
    null,
  ],
}
`;
